# gnucash-lxml

./: .gitignore  README.md  gnucashxml.py  pyproject.toml  setup.py
docs/: gnucash.xml.md
src/gnucash_lxml/: __init__.py  gnucashxml.py  model.py  models.py  parsing.py  prices.py  query.py
src/gnucashxml/: gnucashxml.py
src/gnucashxml-lxml/: __init__.py  models.py  parsing.py  query.py
tests/: conftest.py  pytest.ini  test_sample.py  test_version.py
tests/data/: sample.gnucash
